plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'GoodRestaurant project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // MapStruct (annotation processing)
    implementation 'org.mapstruct:mapstruct:1.6.2'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
    // Ensure Lombok + MapStruct work together
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // QueryDSL 의존성 추가 (openfeign fork)
    implementation("io.github.openfeign.querydsl:querydsl-jpa:7.1") {
        exclude group: "org.hibernate", module: "hibernate-core"
    }
    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:7.1:jpa"

//    // QClass 생성용 annotation processor 경로 추가
//    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.2.0"
//    annotationProcessor "jakarta.annotation:jakarta.annotation-api:3.0.0"

    // Netty native transport dependencies for different platforms
	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.114.Final:osx-aarch_64'
	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.114.Final:osx-x86_64'
}

tasks.named('test') {
	useJUnitPlatform()
}


def querydslDir = "src/main/generated"

sourceSets {
    main {
        java {
            srcDirs += [querydslDir]
        }
    }
}

clean.doLast {
    file(querydslDir).deleteDir()
}